# stremio-core-kotlin

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  build.gradle  build.gradle.kts  build.rs  gradle.properties  jitpack.yml  pom.xml  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: build-kotlin.yml  build.yml  release-swift.yml  release.yml  release_pipeline.yml
Sources/StremioCore/: Core.swift  StremioApi+CallbackType.swift  StremioApi.swift  stremio  swift-protobuf-config.json
Sources/Wrapper/include/: wrapper.h
Support/: cbindgen.toml  installDependencies.command
protobuf-codegen/: build.gradle.kts
src/androidMain/kotlin/com/stremio/core/: Core.kt  DeepLinks.kt
src/androidMain/rust/bridge/: action.rs  android_model_field.rs  loadable.rs  meta_preview.rs
src/androidMain/rust/env/: fetch.rs
src/androidMain/rust/model/fields/: ctx.rs  discover.rs  mod.rs
src/commonMain/kotlin/com/stremio/core/: Core.kt
src/commonMain/proto/stremio/core/models/: library_with_filters.proto
src/commonMain/proto/stremio/core/runtime/: action_ctx.proto
src/commonMain/proto/stremio/core/types/: stream.proto
src/commonMain/rust/: bridge.rs  lib.rs  model.rs  stremio_core_android.rs
src/commonMain/rust/bridge/: action.rs  android_model_field.rs  auth_request.rs  continue_watching_item.rs  continue_watching_preview.rs  deep_links.rs  env_error.rs  event.rs  events.rs  library_item.rs  loadable.rs  manifest.rs  meta_preview.rs  mod.rs  poster_shape.rs  profile.rs  resource_loadable.rs  resource_request.rs  stream.rs  string.rs
src/commonMain/rust/env/: env.rs  fetch.rs  kotlin_class_name.rs  storage.rs
src/commonMain/rust/model/: addons.rs  fields.rs  mod.rs  model.rs
src/commonMain/rust/model/fields/: catalogs_with_extra.rs  continue_watching_preview.rs  ctx.rs  library.rs  library_by_type.rs  link.rs  meta_details.rs  player.rs  streaming_server.rs
src/commonMain/rust/protobuf/: README.md
src/main/kotlin/com/stremio/core/: Core.kt  Field.kt  Storage.kt
src/main/proto/stremio/core/deep_links/: deep_links.proto
src/main/proto/stremio/core/models/: addon_details.proto  addons_with_filters.proto  catalog_with_filters.proto  catalogs_with_extra.proto  continue_watching_preview.proto  ctx.proto  installed_addons.proto  library_by_type.proto  library_with_filters.proto  link.proto  loadable.proto  meta_details.proto  player.proto  streaming_server.proto
src/main/proto/stremio/core/runtime/: action.proto  action_catalogs_with_extra.proto  action_ctx.proto  action_library_by_type.proto  action_link.proto  (+8 more)
src/main/rust/: jni_ext.rs  lib.rs  stremio_core_android.rs
src/main/rust/bridge/: action.rs  android_model_field.rs  auth_request.rs  date.rs  env_error.rs  event.rs  external_player_link.rs  extra_value.rs  from_protobuf.rs  jobject.rs  library_item.rs  link.rs  link_code_response.rs  list.rs  loadable.rs  manifest.rs  meta_preview.rs  mod.rs  option.rs  pair.rs  poster_shape.rs  profile.rs  resource_loadable.rs  resource_path.rs  resource_request.rs  stream.rs  string.rs  subtitle.rs  to_jni_byte_array.rs  to_protobuf.rs  try_from_kotlin.rs  try_into_kotlin.rs
src/main/rust/env/: env.rs  event.rs  fetch.rs  kotlin_class_name.rs  mod.rs  storage.rs
src/main/rust/model/: library.rs  mod.rs  model.rs
src/main/rust/model/fields/: addon_detail.rs  addons_with_filters.rs  catalogs_with_extra.rs  continue_watching_preview.rs  ctx.rs  discover.rs  library.rs  library_by_type.rs  link.rs  meta_details.rs  mod.rs  player.rs  streaming_server.rs
stremio-core-kotlin/: Cargo.toml  LICENSE.md  README.md  build.gradle.kts  gradle.properties
stremio-core-kotlin/.cargo/: config copy.toml  config.toml
stremio-core-kotlin/src/androidMain/: AndroidManifest.xml
stremio-core-kotlin/src/androidMain/kotlin/com/stremio/core/: Core.kt
stremio-core-kotlin/src/commonMain/rust/: lib.rs  stremio_core_kotlin.rs
stremio-core-kotlin/src/commonMain/rust/bridge/: android_model_field.rs  to_jni_byte_array.rs
stremio-core-kotlin/src/commonMain/rust/env/: env.rs  fetch.rs  kotlin_class_name.rs  storage.rs
stremio-core-kotlin/src/commonMain/rust/model/: model.rs
stremio-core-kotlin/src/commonMain/rust/stremio_core_kotlin/: subscriber.rs
stremio-core-protobuf/: Cargo.toml  LICENSE.md  build.rs
stremio-core-protobuf/proto/stremio/core/models/: addon_details.proto  addons_with_filters.proto  catalogs_with_extra.proto  ctx.proto  meta_details.proto  player.proto  streaming_server.proto
stremio-core-protobuf/proto/stremio/core/runtime/: action.proto  action_catalog_with_filters.proto  action_catalogs_with_extra.proto  action_ctx.proto  action_library_with_filters.proto  action_load.proto  action_meta_details.proto  action_player.proto  action_streaming_server.proto  event.proto  field.proto
stremio-core-protobuf/proto/stremio/core/types/: addon.proto  auth_request.proto  manifest.proto  meta_item.proto  meta_item_preview.proto  profile.proto  rating.proto  stream.proto  streaming_server_urls.proto  subtitle.proto  video.proto
stremio-core-protobuf/src/: bridge.rs  lib.rs
stremio-core-protobuf/src/bridge/: action.rs  auth_request.rs  date.rs  env_error.rs  event.rs  events.rs  extra_value.rs  library_item.rs  link.rs  list.rs  loadable.rs  manifest.rs  meta_preview.rs  option.rs  pair.rs  poster_shape.rs  primitives.rs  profile.rs  resource_loadable.rs  resource_path.rs  resource_request.rs  stream.rs  streaming_server_urls.rs  string.rs  subtitle.rs
stremio-core-protobuf/src/model/: addons.rs  fields.rs
stremio-core-protobuf/src/model/fields/: addon_detail.rs  addons_with_filters.rs  catalogs_with_extra.rs  continue_watching_preview.rs  ctx.rs  discover.rs  library.rs  library_by_type.rs  link.rs  meta_details.rs  player.rs  streaming_server.rs
stremio-core-swift/: Cargo.toml  README.md
stremio-core-swift/src/: bridge.rs  env.rs  lib.rs  model.rs  stremio_core_apple.rs
stremio-core-swift/src/bridge/: apple_model_field.rs
stremio-core-swift/src/env/: env.rs  event.rs  fetch.rs  storage.rs
stremio-core-swift/src/model/: model.rs
(+65 files in other folders)
