[package]
name = "stremio-core-android"
version = "1.2.6"
authors = ["Smart Code OOD"]
edition = "2021"

rust-version = "1.70.0"

[features]
default = ["kotlin"]
kotlin = [
    # for fetch (making requests):
    "dep:http",
    "dep:reqwest",
    "dep:openssl",
    "dep:http-cache-reqwest",
    "dep:reqwest-middleware",
    # executors
    "dep:tokio",
    # java bindings
    "dep:jni",
    "dep:getrandom",
]

[lib]
path = "src/commonMain/rust/lib.rs"

[workspace]
resolver = "2"
members = ["stremio-core-protobuf"]

[workspace.dependencies]
stremio-core = { version = "0.1", git = "https://github.com/Stremio/stremio-core", branch = "development", features = [
    "derive",
    "analytics",
    "env-future-send",
] }
# For share UI models
stremio-core-web = { version = "0.47", git = "https://github.com/Stremio/stremio-core", branch = "development", default-features = false }
stremio-core-protobuf = { version = "0.1", path = "stremio-core-protobuf", default-features = false }

# Protobuf 
prost = "0.12"
prost-types = "0.12"

# Protobuf for codegen, e.g. build.rs
prost-build = "0.12"
protox = "0.5"
glob = "0.3.0"

# Http Request handling
http = { version = "0.2.*" }
reqwest = { version = "0.11" }
openssl = { version = "=0.10.40" }
http-cache-reqwest = { version = "0.4.5" }
reqwest-middleware = { version = "0.1.6" }

# Serialization
serde = "1.0.*"
serde_json = "1.0.*"
serde_path_to_error = "0.1.*"

# Utils
once_cell = "1"
itertools = "0.13"
getrandom = "0.2"
chrono = "0.4"
hex = "0.4"

# Futures
futures = "0.3"

[profile.release]
lto = true
opt-level = 3

[dependencies]
stremio-core.workspace = true
# stremio-core-web.workspace = true
stremio-core-protobuf.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true

strum = { version = "0.22.*", features = ["derive"] }

# Utils
once_cell.workspace = true
semver = { version = "1", features = ["serde"] }
enclose = "1.1.*"
itertools.workspace = true
chrono.workspace = true
boolinator = "2.4.*"
Inflector = "0.11.*"
cfg-if = "0.1.*"
auto_impl = "0.5.*"

base64 = "0.13.*"
hex.workspace = true
flate2 = "1.0.*"
url = { version = "2.4", features = ["serde"] }
percent-encoding = "2.1"

# kotlin specific + Env impl
getrandom = { workspace = true, optional = true }

jni = { version = "0.19.*", optional = true }

# Async executor
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
# Futures
futures.workspace = true

# Http Request handling
http = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }
openssl = { workspace = true, features = ["vendored"], optional = true }
http-cache-reqwest = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }

# Bytes / Protobuf 
bytes = "1.1.0"
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
glob.workspace = true

# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../core" }
# stremio-core-web = { path = "../core/stremio-core-web" }
