[workspace]
resolver = "2"
members = ["stremio-core-kotlin", "stremio-core-protobuf"]

[workspace.dependencies]
stremio-core = { version = "0.1", git = "https://github.com/Stremio/stremio-core", branch = "development", features = [
    "derive",
    "analytics",
    "env-future-send",
] }
# For share UI models
stremio-core-web = { version = "0.47", git = "https://github.com/Stremio/stremio-core", branch = "development", default-features = false }
stremio-core-protobuf = { version = "0.1", path = "stremio-core-protobuf", default-features = false }

# Protobuf
prost = "0.12"
prost-types = "0.12"

# Protobuf for codegen, e.g. build.rs
prost-build = "0.12"
protox = "0.5"
glob = "0.3.0"

# Http Request handling
http = { version = "0.2.*" }
reqwest = { version = "0.11" }
openssl = { version = "=0.10.57" }
# https://github.com/sfackler/rust-openssl/issues/2163
openssl-sys = { version = "=0.9.92" }
http-cache-reqwest = { version = "0.4.5" }
reqwest-middleware = { version = "0.1.6" }

# Serialization
serde = "1.0.*"
serde_json = "1.0.*"
serde_path_to_error = "0.1.*"

# Utils
once_cell = "1"
itertools = "0.13"
getrandom = "0.2"
chrono = "0.4"
hex = "0.4"

# Futures
futures = "0.3"

[profile.release]
lto = true
opt-level = 3
