[workspace]
resolver = "2"
members = ["stremio-core-kotlin", "stremio-core-protobuf"]

[workspace.dependencies]
stremio-core = { version = "0.1", git = "https://github.com/Stremio/stremio-core", branch = "development", features = [
    "derive",
    "analytics",
    "env-future-send",
] }
# For share UI models
stremio-core-web = { version = "0.49", git = "https://github.com/Stremio/stremio-core", branch = "development", default-features = false }
stremio-core-protobuf = { version = "0.1", path = "stremio-core-protobuf", default-features = false }

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Protobuf for codegen, e.g. build.rs
# Enable the `cleanup-markdown` feature to clean any non-rust markdown examples
prost-build = { version = "0.13", features = ["cleanup-markdown"] }
protox = "0.7"
glob = "0.3.0"

# Http Request handling
http = { version = "1.2" }
reqwest = { version = "0.12" }
openssl = { version = "=0.10.57" }
# https://github.com/sfackler/rust-openssl/issues/2163
openssl-sys = { version = "=0.9.92" }
http-cache-reqwest = { version = "0.15" }
reqwest-middleware = { version = "0.4" }

# Serialization
serde = "1.0.*"
serde_json = "1.0.*"
serde_path_to_error = "0.1.*"

# Utils
once_cell = "1"
itertools = "0.14"
getrandom = "0.3"
chrono = "0.4"
hex = "0.4"

# Futures
futures = "0.3"

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }


# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../core" }
# stremio-core-web = { path = "../core/stremio-core-web" }

[profile.release]
lto = true
opt-level = 3
