[package]
name = "stremio-core-protobuf"
version = "0.1.0"
edition = "2021"

authors = ["Smart Code OOD", "Lachezar Lechev <lachezar@ambire.com>"]

[lib]
crate-type = ["rlib", "staticlib", "dylib"]

[features]
default = []

[dependencies]
stremio-core.workspace = true

# Protobuf 
prost.workspace = true
prost-types.workspace = true

# Utils
semver = { version = "1", features = ["serde"] }
chrono = "0.4.*"
boolinator = "2.4.*"
Inflector = "0.11.*"
itertools.workspace = true

hex = "0.4.*"
url = { version = "2.4", features = ["serde"] }

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
glob.workspace = true

# 0.14.3 bumped MSRV to 1.75 and it's used in protox-parse
logos = "=0.14.2"
logos-codegen = "=0.14.2"
logos-derive = "=0.14.2"