[package]
name = "stremio-core-swift"
version = "1.2.63"
authors = ["Smart Code OOD"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib"]
path = "src/commonMain/rust/lib.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
stremio-core = { git = "https://github.com/Stremio/stremio-core", branch = "development", features = [
    "derive",
    "analytics",
    "env-future-send",
] }
stremio-core-protobuf = { git = "https://github.com/Stremio/stremio-core-kotlin", branch = "feat/improve-imports-and-exports" }

serde = "1.0.*"
serde_json = "1.0.*"
futures = "0.3.*"
http = "0.2.*"
chrono = "0.4.*"
hex = "0.4.*"

once_cell = "1"
enclose = "1.1.*"
Inflector = "0.11.*"
getrandom = "0.2.*"
serde_path_to_error = "0.1.*"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
prost = "0.12"
prost-types = "0.12"

objc2-foundation = { version = "0.2.2", features = [
    "NSString",
    "NSData",
    "NSUserDefaults",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
    "NSURL",
    "NSError",
    "block2",
] }

# apple feature is deprecated, apple platform is by default enabled.
objc2 = { version = "0.5"}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
block2 = { version = "0.5" }
# objc-sys = { version = "0.3", features = ["apple"] }

[target.'cfg(target_os = "linux")'.dependencies]
block2 = { version = "0.5", default-features = false, features = ["gnustep-2-0"] }
# objc-sys = { version = "0.3", features = ["gnustep-2-0"] }
objc2 = { version = "0.5", features = ["gnustep-2-0"] }

[build-dependencies]
prost-build = "0.12"
protox = "0.5"
glob = "0.3.0"

# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../stremio-core" }
