[package]
name = "stremio-core-swift"
version = "0.1.0"
authors = ["Smart Code OOD"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
stremio-core.workspace = true
stremio-core-protobuf.workspace = true

serde = "1.0.*"
serde_json = "1.0.*"
futures = "0.3.*"
http.workspace = true
chrono = "0.4.*"
hex = "0.4.*"

once_cell = "1"
enclose = "1.1.*"
Inflector = "0.11.*"
getrandom = "0.2.*"
serde_path_to_error = "0.1.*"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
prost.workspace = true
prost-types.workspace = true

objc2-foundation = { version = "0.2.2", features = [
    "NSString",
    "NSData",
    "NSUserDefaults",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
    "NSURL",
    "NSError",
    "block2",
] }

# apple feature is deprecated, apple platform is by default enabled.
objc2 = { version = "0.5"}

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
block2 = { version = "0.5" }
# objc-sys = { version = "0.3", features = ["apple"] }

[target.'cfg(target_os = "linux")'.dependencies]
block2 = { version = "0.5", default-features = false, features = ["gnustep-2-0"] }
# objc-sys = { version = "0.3", features = ["gnustep-2-0"] }
objc2 = { version = "0.5", features = ["gnustep-2-0"] }

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
glob.workspace = true

# A way to quickly test with local version of `core` crates
# [patch.'https://github.com/Stremio/stremio-core']
# stremio-core = { path = "../stremio-core" }
